--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "panlatent/craft-qiniu",
-    "description": "Qiniu Cloud Storage plugin for Craft CMS 3",
+    "description": "Qiniu Cloud Storage plugin for Craft 3",
     "type": "craft-plugin",
     "version": "0.1.0",
     "keywords": [
